Wed May  3 01:46:47 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * expected/*/make/*:
        * expected/*/nmake/*:

          Updated to reflect my changes from Wed May  3 01:43:46 UTC 2006.

Thu Apr 20 13:29:57 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * expected/*/em3/*.vcp:

          Updated to reflect my change from Thu Apr 20 13:29:13 UTC 2006.

Thu Mar 23 14:33:13 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * expected/relative/vc7/build/build_lib.vcproj:
        * expected/relative/vc71/build/build_lib.vcproj:
        * expected/wide_coverage/vc7/source/source_lib.vcproj:
        * expected/wide_coverage/vc71/source/source_lib.vcproj:

          Updated to reflect my change from Thu Mar 23 14:30:00 UTC 2006.

Wed Mar 15 19:05:18 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * expected/relative/vc8/build/build_exe.vcproj:
        * expected/relative/vc8/build/build_lib.vcproj:

          Spacing was fixed in the grouped source section.

        * expected/buildflags/*:
        * tests/buildflags/source/bfs.mpc:
        * tests/buildflags/source/directory/gets_flags.cpp:
        * tests/buildflags/source/five.cpp:
        * tests/buildflags/source/fooza.cpp:
        * tests/buildflags/source/foozb.cpp:
        * tests/buildflags/source/four.cpp:
        * tests/buildflags/source/one.cpp:
        * tests/buildflags/source/three.cpp:
        * tests/buildflags/source/two.cpp:

          Added a new test to exercise the buildflags keyword added by my
          Wed Mar 15 18:44:03 UTC 2006 change.

Tue Mar 14 13:11:47 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * run_tests.pl:

          Do not count it as a failure if there are no expected results to
          compare.

Fri Mar 10 13:08:40 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * expected/*/gnuace/*/GNUmakefile.*:

          Updated to reflect my change to the TAO 1.4a gnu.mpd from
          Thu Mar  9 13:09:38 UTC 2006.
